# local-security-pass-vault

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml
.cargo/: audit.toml
.claude/rules/: backup.md  browser-extension.md  crypto.md  security.md  testing.md  vault-schema.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  security.yml
core-vault/: Cargo.toml
core-vault/src/: error.rs  lib.rs  models.rs  sodium.rs  totp.rs
core-vault/src/crypto/: mod.rs
core-vault/src/db/: mod.rs  schema.rs
core-vault/src/vault/: backup.rs  file.rs  honeypot.rs  mod.rs  wordlist.txt
core-vault/tests/: crypto_vectors.rs  vault_lifecycle.rs
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx  theme.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: browser_integration.rs  commands.rs  csv_import.rs  ed25519_key.rs  error.rs  ext_installer.rs  keychain.rs  lib.rs  main.rs  pipe_server.rs  profile_registry.rs  state.rs
desktop/src/api/: vault.ts
desktop/src/components/: ExtensionInstaller.tsx  ItemCard.tsx  PasswordField.tsx  PasswordGenerator.tsx  TotpCode.tsx  TotpSetup.tsx
desktop/src/lib/: vaultRegistry.ts
desktop/src/pages/: ItemDetail.tsx  ItemForm.tsx  Settings.tsx  Setup.tsx  Unlock.tsx  VaultList.tsx  VaultPicker.tsx  Welcome.tsx
desktop/src/types/: vault.ts
docs/: index.html  threat-model.md
docs/adr/: ADR-001-crypto-library.md  ADR-002-desktop-framework.md  ADR-003-backup-format.md
docs/wiki/: Backup-and-Recovery.md  Browser-Extension.md  Build-from-Source.md  Donate.md  FAQ.md  Feature-Guide.md  Getting-Started.md  Home.md  Security-Architecture.md  Security-Review-Checklist.md
extension/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.content.config.ts
extension/public/: manifest.json
extension/scripts/: sri-check.cjs  sri-check.js
extension/src/background/: index.ts  native.ts  profile.ts
extension/src/content/: index.ts
extension/src/popup/: App.css  App.tsx  index.html
extension/src/shared/: domain.ts  types.ts
extension/tests/: domain.test.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_item_deserialize.rs  fuzz_vault_open.rs
native-host/: Cargo.toml
native-host/src/: main.rs
scripts/: com.vaultpass.native.json  dev-setup.sh  install-native-host.ps1
