[package]
name = "core-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Криптографическое ядро и модель данных VaultPass"

[dependencies]
# Крипто — ТОЛЬКО libsodium. См. docs/adr/ADR-001 и .claude/rules/crypto.md.
# libsodium-sys-stable собирает libsodium из исходников статически (Windows MSVC + Linux),
# не требует pkg-config/системного libsodium. Одобрено как отклонение от ADR-001.
libsodium-sys-stable = "1.22"

# Не-крипто зависимости (разрешены): модель данных и сериализация payload.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
# SQLite — bundled (компилируется из исходников, нужен только C-компилятор MSVC,
# без OpenSSL). Шифрование файла БД делаем сами через libsodium AEAD (db_key),
# работаем с in-memory БД. См. решение от 2026-06 (отказ от SQLCipher).
rusqlite = { version = "0.32", features = ["bundled", "serialize"] }

# Бэкап: BIP-39 мнемоника (ADR-003) + BLAKE3 checksum.
# bip39: English-only, без rand (используем libsodium CSPRNG).
# blake3: быстрый криптографический хеш для проверки целостности.
bip39   = "2"
blake3  = "1"
# TOTP 2FA: RFC 6238 code generation from Base32 secret.
totp-rs = "5"
# Гарантированное обнуление секретов в памяти (volatile write, не оптимизируется).
zeroize = "1"

[features]
# Раскрывает внутренние точки входа для cargo-fuzz (см. fuzz/). Не для прода.
fuzz = []

[dev-dependencies]
hex = "0.4"

[lints.clippy]
# Запрет unwrap/expect/panic вне тестов — см. .claude/rules/testing.md
unwrap_used = "warn"
expect_used = "warn"
