[package]
name = "vaultpass-desktop"
version = "0.1.0"
edition = "2021"

# The _lib suffix avoids a name collision between the binary and lib on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
[lib]
name = "vaultpass_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["tray-icon"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
hex         = "0.4"
csv         = "1"
tokio                = { version = "1", features = ["net", "io-util", "rt-multi-thread"] }
libsodium-sys-stable = "1"
core-vault           = { path = "../../core-vault" }
keyring              = "2"
rfd                  = { version = "0.14", default-features = false, features = ["tokio"] }
webbrowser           = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
