[package]
name = "vaultpass-desktop"
version.workspace = true
edition = "2021"

# The _lib suffix avoids a name collision between the binary and lib on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
[lib]
name = "vaultpass_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["tray-icon"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
hex         = "0.4"
csv         = "1"
tokio                = { version = "1", features = ["net", "io-util", "rt-multi-thread", "time"] }
libsodium-sys-stable = "1"
core-vault           = { path = "../../core-vault" }
keyring              = "2"
rfd                  = { version = "0.14", default-features = false, features = ["tokio"] }
webbrowser           = "1"
# QR code generation (SVG) for 2FA setup screen
qrcode               = "0.13"
# TOTP QR decoding from clipboard image
arboard              = { version = "3", default-features = false, features = ["image-data"] }
rqrr                 = "0.9"
image                = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "linux")'.dependencies]
rfd  = { version = "0.14", default-features = false, features = ["gtk3"] }
libc = "0.2"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
